--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -33,8 +33,7 @@ ssl = ["openssl", "tokio-openssl"]
 rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
 
 [dependencies]
-#actix-service = "0.2.0"
-actix-service = { path="../actix-service" }
+actix-service = "0.2.0"
 actix-rt = "0.1.0"
 
 log = "0.4"
