--- a/actix-connector/Cargo.toml
+++ b/actix-connector/Cargo.toml
@@ -27,8 +27,7 @@ default = []
 ssl = ["openssl", "tokio-openssl"]
 
 [dependencies]
-#actix-service = "0.1.6"
-actix-service = { path="../actix-service" }
+actix-service = "0.2.0"
 actix-codec = "0.1.0"
 futures = "0.1"
 tokio-tcp = "0.1"
