--- a/actix-test-server/Cargo.toml
+++ b/actix-test-server/Cargo.toml
@@ -34,8 +34,7 @@ rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
 
 [dependencies]
 actix-rt = "0.1.0"
-#actix-server = "0.1.0"
-actix-server = { path="../actix-server" }
+actix-server = "0.2.0"
 
 log = "0.4"
 
