--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,12 +37,10 @@ session = ["cookie/secure"]
 ssl = ["openssl", "actix-connector/ssl"]
 
 [dependencies]
-actix-service = "0.1.6"
+actix-service = "0.2.0"
 actix-codec = "0.1.0"
-# actix-connector = "0.1.0"
-# actix-utils = "0.1.0"
-actix-connector = { git = "https://github.com/actix/actix-net.git" }
-actix-utils = { git = "https://github.com/actix/actix-net.git" }
+actix-connector = "0.2.0"
+actix-utils = "0.2.0"
 
 base64 = "0.10"
 backtrace = "0.3"
@@ -78,7 +76,7 @@ openssl = { version="0.10", optional = true }
 [dev-dependencies]
 actix-rt = "0.1.0"
 actix-web = "0.7"
-actix-server = "0.1"
+actix-server = "0.2"
 actix-http-test = { path="test-server" }
 env_logger = "0.6"
 serde_derive = "1.0"
