--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -18,8 +18,7 @@ name = "actix_utils"
 path = "src/lib.rs"
 
 [dependencies]
-#actix-service = "0.2.0"
-actix-service = { git = "https://github.com/actix/actix-net.git" }
+actix-service = "0.2.0"
 actix-codec = "0.1.0"
 bytes = "0.4"
 futures = "0.1"
@@ -29,3 +28,6 @@ log = "0.4"
 
 [dev-dependencies]
 actix-rt = "0.1"
+
+[patch.crates-io]
+actix-service = { git = "https://github.com/actix/actix-net.git" }
