--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -28,6 +28,9 @@ default = ["session"]
 # sessions feature, session require "ring" crate and c compiler
 session = ["cookie/secure"]
 
+# openssl
+ssl = ["openssl", "actix-http/ssl", "actix-server/ssl"]
+
 [dependencies]
 actix-codec = "0.1"
 actix-service = "0.2.0"
@@ -52,3 +55,5 @@ serde_urlencoded = "0.5.3"
 time = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
+
+openssl = { version="0.10", optional = true }
