fix manifest features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ default = ["session"]
 session = ["cookie/secure"]
 
 # openssl
-ssl = ["openssl", "actix-connector/ssl", "actix-server/ssl", "actix-http-test/ssl"]
+ssl = ["openssl"]
 
 [dependencies]
 actix-service = "0.2.1"
@@ -76,7 +76,10 @@ openssl = { version="0.10", optional = true }
 [dev-dependencies]
 actix-rt = "0.1.0"
 actix-web = "0.7"
-actix-server = "0.2"
-actix-http-test = { path="test-server" }
+actix-server = { version="0.2", features=["ssl"] }
+actix-connector =  { version="0.2.0", features=["ssl"] }
+actix-utils = "0.2.1"
+actix-http-test = { path="test-server", features=["ssl"] }
 env_logger = "0.6"
 serde_derive = "1.0"
+openssl = { version="0.10" }
