--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,10 +56,13 @@ h2 = "0.1.16"
 http = "0.1.8"
 httparse = "1.3"
 indexmap = "1.0"
+lazy_static = "1.0"
+language-tags = "0.2"
 log = "0.4"
 mime = "0.3"
 percent-encoding = "1.0"
 rand = "0.6"
+regex = "1.0"
 serde = "1.0"
 serde_json = "1.0"
 sha1 = "0.6"
