--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -33,11 +33,15 @@ ssl = ["openssl", "actix-http/ssl", "actix-server/ssl"]
 
 [dependencies]
 actix-codec = "0.1"
-actix-service = "0.2.0"
 actix-rt = "0.1.0"
-actix-server = "0.2.0"
-actix-utils = "0.2.0"
 actix-http = { path=".." }
+
+#actix-service = "0.2.0"
+#actix-server = "0.2.0"
+#actix-utils = "0.2.0"
+actix-service = { git = "https://github.com/actix/actix-net" }
+actix-server = { git = "https://github.com/actix/actix-net" }
+actix-utils = { git = "https://github.com/actix/actix-net" }
 
 base64 = "0.10"
 bytes = "0.4"
