--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: rust
 sudo: required
 dist: trusty
-addons:
-    apt:
-        packages:
-            - libssl-dev
 
-cache: cargo
+cache:
+  cargo: true
+  apt: true
 
 matrix:
   include:
@@ -15,6 +13,16 @@ matrix:
     - rust: nightly
   allow_failures:
     - rust: nightly
+
+env:
+  global:
+    - RUSTFLAGS="-C link-dead-code"
+    - OPENSSL_VERSION=openssl-1.0.2
+
+before_install:
+  - sudo add-apt-repository -y ppa:0k53d-karl-f830m/openssl
+  - sudo apt-get update -qq
+  - sudo apt-get install -y openssl libssl-dev libelf-dev libdw-dev cmake gcc binutils-dev libiberty-dev
 
 before_cache: |
   if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
