--- a/staticfiles/Cargo.toml
+++ b/staticfiles/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-web-fs"
+name = "actix-staticfiles"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Static files support for Actix web."
@@ -14,7 +14,7 @@ edition = "2018"
 workspace = ".."
 
 [lib]
-name = "actix_web_fs"
+name = "actix_staticfiles"
 path = "src/lib.rs"
 
 [dependencies]
