--- a/actix-connector/Cargo.toml
+++ b/actix-connector/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-connector"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix Connector - tcp connector service"
 keywords = ["network", "framework", "async", "futures"]
@@ -11,7 +11,7 @@ categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
-workspace = "../"
+workspace = ".."
 
 [package.metadata.docs.rs]
 features = ["ssl"]
@@ -27,8 +27,7 @@ default = []
 ssl = ["openssl", "tokio-openssl"]
 
 [dependencies]
-#actix-service = "0.2.0"
-actix-service = { path="../actix-service" }
+actix-service = "0.3.0"
 actix-codec = "0.1.0"
 futures = "0.1"
 tokio-tcp = "0.1"
