--- a/actix-test-server/Cargo.toml
+++ b/actix-test-server/Cargo.toml
@@ -34,12 +34,9 @@ rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
 
 [dependencies]
 actix-rt = "0.1.0"
-#actix-server = "0.2.0"
-actix-server = { path="../actix-server" }
+actix-server = "0.3.0"
 
 log = "0.4"
-
-# io
 net2 = "0.2"
 futures = "0.1"
 tokio-tcp = "0.1"
