--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -35,13 +35,9 @@ ssl = ["openssl", "actix-http/ssl", "actix-server/ssl"]
 actix-codec = "0.1"
 actix-rt = "0.1.0"
 actix-http = { path=".." }
-
-#actix-service = "0.2.0"
-#actix-server = "0.2.0"
-#actix-utils = "0.2.0"
-actix-service = { git = "https://github.com/actix/actix-net" }
-actix-server = { git = "https://github.com/actix/actix-net" }
-actix-utils = { git = "https://github.com/actix/actix-net" }
+actix-service = "0.3.0"
+actix-server = "0.3.0"
+actix-utils = "0.3.0"
 
 base64 = "0.10"
 bytes = "0.4"
