--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,13 +44,11 @@ flate2-rust = ["flate2/rust_backend"]
 
 [dependencies]
 actix-codec = "0.1.0"
-#actix-service = "0.2.1"
-#actix-server = "0.2.1"
-#actix-utils = "0.2.1"
-actix-utils = { git = "https://github.com/actix/actix-net.git" }
+actix-service = "0.3.0"
+actix-utils = "0.3.0"
+
 actix-http = { git = "https://github.com/actix/actix-http.git" }
 actix-router = { git = "https://github.com/actix/actix-net.git" }
-actix-service = { git = "https://github.com/actix/actix-net.git" }
 
 bytes = "0.4"
 derive_more = "0.14"
@@ -73,8 +71,7 @@ flate2 = { version="^1.0.2", optional = true, default-features = false }
 
 [dev-dependencies]
 actix-rt = "0.1.0"
-#actix-server = { version="0.2", features=["ssl"] }
-actix-server = { git = "https://github.com/actix/actix-net.git", features=["ssl"] }
+actix-server = { version="0.3.0", features=["ssl"] }
 actix-http = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
 actix-http-test = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
 rand = "0.6"
