--- a/staticfiles/Cargo.toml
+++ b/staticfiles/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-web = { path=".." }
 actix-http = { git = "https://github.com/actix/actix-http.git" }
-actix-service = { git = "https://github.com/actix/actix-net.git" }
+actix-service = "0.3.0"
 
 bytes = "0.4"
 futures = "0.1"
@@ -34,6 +34,7 @@ v_htmlescape = "0.4"
 [dev-dependencies]
 actix-rt = "0.1.0"
 #actix-server = { version="0.2", features=["ssl"] }
+actix-web = { path="..", features=["ssl"] }
 actix-server = { git = "https://github.com/actix/actix-net.git", features=["ssl"] }
 actix-http = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
 actix-http-test = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
