--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -18,8 +18,7 @@ name = "actix_utils"
 path = "src/lib.rs"
 
 [dependencies]
-#actix-service = "0.3.1"
-actix-service = { path="../actix-service" }
+actix-service = "0.3.1"
 actix-codec = "0.1.0"
 bytes = "0.4"
 futures = "0.1.24"
