--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ session = ["cookie/secure"]
 ssl = ["openssl", "actix-connector/ssl"]
 
 [dependencies]
-actix-service = "0.3.1"
+actix-service = "0.3.2"
 actix-codec = "0.1.0"
 actix-connector = "0.3.0"
 actix-utils = "0.3.1"
@@ -78,7 +78,8 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-rt = "0.1.0"
-actix-server = { version = "0.3.0", features=["ssl"] }
+#actix-server = { version = "0.3.0", features=["ssl"] }
+actix-server = { git="https://github.com/actix/actix-net.git", features=["ssl"] }
 actix-connector = { version = "0.3.0", features=["ssl"] }
 actix-http-test = { path="test-server", features=["ssl"] }
 env_logger = "0.6"
