--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -35,9 +35,10 @@ ssl = ["openssl", "actix-http/ssl", "actix-server/ssl"]
 actix-codec = "0.1"
 actix-rt = "0.1.0"
 actix-http = { path=".." }
-actix-service = "0.3.0"
-actix-server = "0.3.0"
-actix-utils = "0.3.0"
+actix-service = "0.3.2"
+#actix-server = "0.3.0"
+actix-server = { git="https://github.com/actix/actix-net.git" }
+actix-utils = "0.3.2"
 
 base64 = "0.10"
 bytes = "0.4"
