--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,10 +81,12 @@ mime = "0.3"
 net2 = "0.2.33"
 num_cpus = "1.10"
 parking_lot = "0.7"
+regex = "1.0"
 serde = "1.0"
 serde_json = "1.0"
 serde_urlencoded = "^0.5.3"
 threadpool = "1.7"
+time = "0.1"
 
 # middlewares
 # actix-session = { path="session", optional = true }
