--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ actix-codec = "0.1.1"
 actix-connector = { git="https://github.com/actix/actix-net.git" }
 actix-service = { git="https://github.com/actix/actix-net.git" }
 actix-utils = { git="https://github.com/actix/actix-net.git" }
+actix-server-config = { git="https://github.com/actix/actix-net.git" }
 
 base64 = "0.10"
 backtrace = "0.3"
@@ -92,6 +93,7 @@ actix-server = { git="https://github.com/actix/actix-net.git", features=["ssl"] 
 #actix-connector = { version = "0.3.0", features=["ssl"] }
 actix-connector = { git="https://github.com/actix/actix-net.git", features=["ssl"] }
 actix-http-test = { path="test-server", features=["ssl"] }
+
 env_logger = "0.6"
 serde_derive = "1.0"
 openssl = { version="0.10" }
