revert generic request parameter for service; support ServerConfig as new factory config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ actix-utils = { git = "https://github.com/actix/actix-net.git" }
 actix-http = { git = "https://github.com/actix/actix-http.git" }
 actix-router = { git = "https://github.com/actix/actix-net.git" }
 actix-server = { git = "https://github.com/actix/actix-net.git" }
-#actix-router = { path="../actix-net/router" }
+actix-server-config = { git = "https://github.com/actix/actix-net.git" }
 
 bytes = "0.4"
 derive_more = "0.14"
