--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -18,9 +18,8 @@ name = "actix_utils"
 path = "src/lib.rs"
 
 [dependencies]
-#actix-service = "0.3.2"
-actix-service = { path="../actix-service" }
-actix-codec = "0.1.0"
+actix-service = "0.3.3"
+actix-codec = "0.1.1"
 bytes = "0.4"
 futures = "0.1.24"
 tokio-timer = "0.2.8"
@@ -28,4 +27,4 @@ tokio-current-thread = "0.1.4"
 log = "0.4"
 
 [dev-dependencies]
-actix-rt = "0.1"
+actix-rt = "0.2"
