--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,15 +38,10 @@ ssl = ["openssl", "actix-connector/ssl"]
 fail = ["failure"]
 
 [dependencies]
-#actix-service = "0.3.2"
+actix-service = "0.3.3"
 actix-codec = "0.1.1"
-
-#actix-connector = "0.3.0"
-#actix-utils = "0.3.1"
-
-actix-connector = { git="https://github.com/actix/actix-net.git" }
-actix-service = { git="https://github.com/actix/actix-net.git" }
-actix-utils = { git="https://github.com/actix/actix-net.git" }
+actix-connector = "0.3.0"
+actix-utils = "0.3.3"
 actix-server-config = { git="https://github.com/actix/actix-net.git" }
 
 base64 = "0.10"
@@ -90,8 +85,7 @@ failure = { version = "0.1.5", optional = true }
 actix-rt = "0.2.0"
 #actix-server = { version = "0.3.0", features=["ssl"] }
 actix-server = { git="https://github.com/actix/actix-net.git", features=["ssl"] }
-#actix-connector = { version = "0.3.0", features=["ssl"] }
-actix-connector = { git="https://github.com/actix/actix-net.git", features=["ssl"] }
+actix-connector = { version = "0.3.0", features=["ssl"] }
 actix-http-test = { path="test-server", features=["ssl"] }
 
 env_logger = "0.6"
