--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -32,15 +32,13 @@ session = ["cookie/secure"]
 ssl = ["openssl", "actix-http/ssl", "actix-server/ssl"]
 
 [dependencies]
-actix-codec = "0.1"
+actix-codec = "0.1.1"
 actix-rt = "0.2.0"
 actix-http = { path=".." }
-#actix-service = "0.3.2"
-actix-service = { git="https://github.com/actix/actix-net.git" }
+actix-service = "0.3.3"
 #actix-server = "0.3.0"
 actix-server = { git="https://github.com/actix/actix-net.git" }
-#actix-utils = "0.3.2"
-actix-utils = { git="https://github.com/actix/actix-net.git" }
+actix-utils = "0.3.2"
 
 base64 = "0.10"
 bytes = "0.4"
