--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -20,8 +20,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-web = { path=".." }
 actix-http = { git = "https://github.com/actix/actix-http.git" }
-actix-service = { git = "https://github.com/actix/actix-net.git" }
-#actix-service = "0.3.0"
+actix-service = "0.3.3"
 
 bytes = "0.4"
 futures = "0.1"
