add blocking mod support

--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -18,9 +18,14 @@ name = "actix_rt"
 path = "src/lib.rs"
 
 [dependencies]
-log = "0.4"
 bytes = "0.4"
+derive_more = "0.14"
 futures = "0.1.25"
+parking_lot = "0.7"
+lazy_static = "1.2"
+log = "0.4"
+num_cpus = "1.10"
+threadpool = "1.7"
 tokio-current-thread = "0.1"
 tokio-executor = "0.1.5"
 tokio-reactor = "0.1.7"
