--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,11 @@ ssl = ["openssl", "actix-connector/ssl"]
 fail = ["failure"]
 
 [dependencies]
-actix-service = "0.3.3"
+actix-service = "0.3.4"
 actix-codec = "0.1.1"
 actix-connector = "0.3.0"
-actix-utils = "0.3.3"
-actix-server-config = { git="https://github.com/actix/actix-net.git" }
+actix-utils = "0.3.4"
+actix-server-config = "0.1.0"
 
 base64 = "0.10"
 backtrace = "0.3"
@@ -91,3 +91,4 @@ actix-http-test = { path="test-server", features=["ssl"] }
 env_logger = "0.6"
 serde_derive = "1.0"
 openssl = { version="0.10" }
+tokio-tcp = "0.1"
