--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,15 +61,14 @@ ssl = ["openssl", "actix-server/ssl"]
 
 [dependencies]
 actix-codec = "0.1.0"
-actix-service = "0.3.3"
-actix-utils = "0.3.3"
+actix-service = "0.3.4"
+actix-utils = "0.3.4"
 actix-router = "0.1.0"
 actix-rt = "0.2.1"
 actix-web-codegen = { path="actix-web-codegen" }
-
 actix-http = { git = "https://github.com/actix/actix-http.git" }
-actix-server = { git = "https://github.com/actix/actix-net.git" }
-actix-server-config = { git = "https://github.com/actix/actix-net.git" }
+actix-server = "0.4.0"
+actix-server-config = "0.1.0"
 
 bytes = "0.4"
 cookie = { version="0.11", features=["percent-encode"] }
