--- a/actix-connector/Cargo.toml
+++ b/actix-connector/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "actix-connector"
-version = "0.3.0"
+name = "actix-connect"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix Connector - tcp connector service"
 keywords = ["network", "framework", "async", "futures"]
@@ -27,11 +27,15 @@ default = []
 ssl = ["openssl", "tokio-openssl"]
 
 [dependencies]
-actix-service = "0.3.3"
+actix-service = "0.3.4"
 actix-codec = "0.1.1"
-futures = "0.1"
-tokio-tcp = "0.1"
-tokio-current-thread = "0.1"
+actix-utils = "0.3.4"
+derive_more = "0.14.0"
+either = "1.5.1"
+futures = "0.1.25"
+log = "0.4"
+tokio-tcp = "0.1.3"
+tokio-current-thread = "0.1.5"
 trust-dns-resolver = { version="0.11.0-alpha.2", default-features = false }
 
 # openssl
