--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ path = "src/lib.rs"
 default = ["fail"]
 
 # openssl
-ssl = ["openssl", "actix-connector/ssl"]
+ssl = ["openssl", "actix-connect/ssl"]
 
 # failure integration. it is on by default, it will be off in future versions
 # actix itself does not use failure anymore
@@ -40,7 +40,8 @@ fail = ["failure"]
 [dependencies]
 actix-service = "0.3.4"
 actix-codec = "0.1.1"
-actix-connector = "0.3.0"
+#actix-connector = "0.3.0"
+actix-connect = { path="../actix-net/actix-connect" }
 actix-utils = "0.3.4"
 actix-server-config = "0.1.0"
 
@@ -71,6 +72,7 @@ sha1 = "0.6"
 slab = "0.4"
 serde_urlencoded = "0.5.3"
 time = "0.1"
+tokio-tcp = "0.1.3"
 tokio-timer = "0.2"
 tokio-current-thread = "0.1"
 trust-dns-resolver = { version="0.11.0-alpha.2", default-features = false }
