--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,7 @@ fail = ["failure"]
 [dependencies]
 actix-service = "0.3.4"
 actix-codec = "0.1.1"
-#actix-connector = "0.3.0"
-actix-connect = { path="../actix-net/actix-connect" }
+actix-connect = { git = "https://github.com/actix/actix-net.git" }
 actix-utils = "0.3.4"
 actix-server-config = "0.1.0"
 
